# airbnb-first-booking

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: streamlit_app.py
configs/: project.toml
data/raw/: README.md
data/sample/: airbnb_users_sample.csv
docs/: deployment.md
models/: model_card.json  pipeline.joblib
notebooks/: 00_business_understanding.ipynb  01_data_understanding.ipynb  02_exploratory_analysis.ipynb  03_feature_engineering.ipynb  04_modeling_and_business_results.ipynb  README.md  airbnb-first-booking.ipynb
reports/: data_profile.json  metrics.json
scripts/: download_data.sh
src/: config.py  data_loader.py  predict.py  preprocessing.py  train.py
src/airbnb_first_booking/: __init__.py  api.py  models.py
tests/: test_pipeline.py
