[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airbnb-first-booking"
version = "0.1.0"
description = "Airbnb Predict First Booking Kaggle portfolio workflow"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
